--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-markdown": "^8.0.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.3",
     "typescript": "^4.9.3",
