--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@botui/react": "^1.1.5",
     "@codemirror/autocomplete": "^6.3.3",
     "@codemirror/commands": "^6.1.2",
     "@codemirror/lang-java": "^6.0.1",
@@ -20,6 +21,7 @@
     "@uiw/codemirror-theme-xcode": "^4.15.1",
     "@uiw/react-codemirror": "^4.15.1",
     "axios": "^1.1.3",
+    "botui": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.0.0",
